--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "ejsexcel": "^3.4.9",
     "ng-zorro-antd": "^0.6.0-rc.2",
+    "pm2": "^2.7.2",
     "rxjs": "^5.1.0",
     "sqlite3": "^3.1.13",
     "zone.js": "^0.8.4"
