--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,12 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "allowJs": true,
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
+      "es2015",
       "es2016",
       "dom"
     ]
