--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "aws-sdk": "^2.179.0",
     "core-js": "^2.4.1",
     "ejsexcel": "^3.4.9",
     "ng-zorro-antd": "^0.6.0-rc.2",
+    "node-pre-gyp": "^0.6.39",
     "pm2": "^2.7.2",
     "redux": "^3.7.2",
     "reselect": "^3.0.1",
