--- a/config/config.json
+++ b/config/config.json
@@ -1,22 +1,1 @@
-{
-  "activeState": false,
-  "defaultPwd": "000000",
-  "systemName": "ISS",
-  "openMail": true,
-  "outbox": {
-    "mailbox": "",
-    "smtpAddress":"",
-    "smtpPort":"",
-    "smtpUserName":"",
-    "smtpPwd":""
-  },
-  "localService": {
-    "port": "",
-    "prefix": ""
-  },
-  "remoteService": {
-    "address": "",
-    "port": "",
-    "prefix": ""
-  }
-}
+{"activeState":true,"defaultPwd":"000000","systemName":"ISS","openMail":true,"outbox":{"mailbox":"","smtpAddress":"","smtpPort":"","smtpUserName":"","smtpPwd":""},"localService":{"port":"","prefix":""},"remoteService":{"address":"","port":"","prefix":""}}
