--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^4.0.0",
     "aws-sdk": "^2.179.0",
     "core-js": "^2.4.1",
+    "crypto": "^1.0.1",
     "ejsexcel": "^3.4.9",
     "ng-zorro-antd": "^0.6.0-rc.2",
     "node-pre-gyp": "^0.6.39",
@@ -32,6 +33,7 @@
     "reselect": "^3.0.1",
     "rxjs": "^5.1.0",
     "sqlite3": "^3.1.13",
+    "webpack": "^3.10.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
