--- a/package.json
+++ b/package.json
@@ -14,31 +14,33 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.4.6",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/forms": "^5.2.0",
+    "@angular/http": "^5.2.0",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@angular/router": "^5.2.0",
     "aws-sdk": "^2.179.0",
     "core-js": "^2.4.1",
     "crypto": "^1.0.1",
     "ejsexcel": "^3.4.9",
-    "ng-zorro-antd": "^0.6.0-rc.2",
+    "ng-zorro-antd": "^0.6.10",
     "node-pre-gyp": "^0.6.39",
     "pm2": "^2.7.2",
     "redux": "^3.7.2",
     "reselect": "^3.0.1",
     "rxjs": "^5.1.0",
     "sqlite3": "^3.1.13",
+    "typescript": "^2.6.2",
     "webpack": "^3.10.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "^4.0.0",
+    "@angular/compiler-cli": "^5.2.0",
+    "@types/angular": "^1.6.40",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
@@ -54,7 +56,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "tslint": "~4.5.0"
   }
 }
