--- a/package.json
+++ b/package.json
@@ -23,15 +23,20 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "aws-sdk": "^2.179.0",
+    "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
     "crypto": "^1.0.1",
+    "debug": "^3.1.0",
     "ejsexcel": "^3.4.9",
+    "express": "^4.16.2",
+    "morgan": "^1.9.0",
     "ng-zorro-antd": "^0.6.10",
     "node-pre-gyp": "^0.6.39",
     "pm2": "^2.7.2",
     "redux": "^3.7.2",
     "reselect": "^3.0.1",
     "rxjs": "^5.1.0",
+    "serve-favicon": "^2.4.5",
     "sqlite3": "^3.1.13",
     "typescript": "^2.6.2",
     "webpack": "^3.10.0",
