--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^5.2.0",
     "aws-sdk": "^2.179.0",
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "crypto": "^1.0.1",
     "debug": "^3.1.0",
