--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "electron-prebuilt": "^1.4.13",
     "electron-rebuild": "^1.6.0",
     "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
+    "jasmine-spec-reporter": "^3.2.0",
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
