--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "@angular/router": "^5.2.0",
     "aws-sdk": "^2.179.0",
     "axios": "^0.18.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "body-parser": "^1.18.2",
     "connect-multiparty": "^2.1.0",
     "cookie-parser": "^1.4.3",
