--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ejsexcel": "^3.4.9",
     "express": "^4.16.2",
     "morgan": "^1.9.0",
+    "native-promise-only": "^0.8.1",
     "ng-zorro-antd": "^0.6.10",
     "node-pre-gyp": "^0.6.39",
     "pm2": "^2.7.2",
@@ -57,6 +58,8 @@
     "@types/angular": "^1.6.40",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "codelyzer": "~2.0.0",
     "electron-prebuilt": "^1.4.13",
     "electron-rebuild": "^1.6.0",
